# aibrowsr

./: CLAUDE.md  Cargo.toml  README.cn.md  README.md  autoresearch.jsonl  llm-guide.txt
.github/workflows/: ci.yml  release.yml
npm/: README.md  package.json
npm/scripts/: postinstall.js
skills/aibrowsr/: SKILL.md
skills/chrome-agent/: SKILL.md
src/: browser.rs  cli.rs  daemon.rs  element.rs  main.rs  pipe.rs  run.rs  run_helpers.rs  session.rs  setup.rs  snapshot.rs  truncate.rs
src/cdp/: client.rs  types.rs
src/commands/: click.rs  console.rs  eval.rs  extract.rs  fill.rs  goto.rs  history.rs  inspect.rs  mod.rs  network.rs  read.rs  record.rs  screenshot.rs  tabs.rs  text.rs  wait.rs
tests/: cli_tests.rs  extract_tests.rs
tests/fixtures/: extract_definition_list.html  extract_list.html  extract_semantic_classes.html
tests/js/: extract.fixtures.test.js  package-lock.json
